feat: changing to hookies , adding new features

--- a/my-app/src/components/TodoList/TodoList.module.css
+++ b/my-app/src/components/TodoList/TodoList.module.css
@@ -9,7 +9,7 @@
   justify-content: flex-start;
   flex-direction: column;
   background: url(background_todo.png);
-  width: 700px;
+  width: 80%;
   height: 700px;
   border-radius: 25px;
   overflow-y: scroll;
