--- a/my-app/src/components/Button/Button.module.css
+++ b/my-app/src/components/Button/Button.module.css
@@ -1,10 +1,11 @@
 .primary {
   color: white;
-  background-color: blue;
+  background: linear-gradient(90deg, #5d0cff, #9b00fa);
   width: 100px;
   height: 50px;
   font-size: 20px;
   cursor: pointer;
+  border-radius: 0 4px 4px 0;
 }
 
 .secondary {
@@ -24,4 +25,11 @@
   width: 200px;
   height: 100px;
   font-size: 20px;
+}
+
+.edit {
+  justify-self: start;
+  background: url(edit.svg);
+  width: 100px;
+  height: 100px;
 }
