--- a/my-app/src/components/Input/Input.module.css
+++ b/my-app/src/components/Input/Input.module.css
@@ -2,8 +2,12 @@
   display: flex;
   font-size: 30px;
   color: rgb(20, 223, 223);
-  width: 100%;
-  height: 50px;
-
-  border-radius: 15px;
+  width: 99%;
+  height: 44px;
+  border: 2px solid #5d0cff;
+  opacity: 0.5;
+  color: white;
+  background: transparent;
+  outline: none;
+  border-radius: 4px 0 0 4px;
 }
