--- a/my-app/src/components/ListItem/ListItem.module.css
+++ b/my-app/src/components/ListItem/ListItem.module.css
@@ -10,6 +10,19 @@
   align-items: center;
   justify-content: space-between;
 }
+.selectedContainer {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  width: 90%;
+  border: 4px solid transparent;
+  box-shadow: 0 0 5px rgb(12, 224, 231);
+  background-color: green;
+  opacity: 0.7;
+  border-radius: 25px;
+  align-items: center;
+  justify-content: space-between;
+}
 
 .text {
   font-size: 40px;
